syntax = "proto3";
option go_package = ".;search";

message SearchRequest {
  string query = 1;
  int32 page_number = 2;
  int32 result_per_page = 3;
}

message SearchResponse {
  string returned_msg = 1;
  string page_number = 2;
    
}

service SearchService { //rpc方法
    rpc Search (SearchRequest) returns (SearchResponse);
}


